# pi_agent_atm

./: .atm.toml  .gitignore  .no-mock-allowlist  Cargo.toml  README.md  justfile  rust-toolchain.toml
.claude/agents/: arch-qa.md  critical-plan-reviewer.md  flaky-test-qa.md  plan-scope-reviewer.md  quality-mgr.md  registry.yaml  req-qa.md  rust-architect.md  rust-best-practices-agent.md  rust-code-reviewer.md  rust-developer.md  rust-qa-agent.md  upstream-merge-qa.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  fix-assignment.xml.j2  qa-template.xml.j2  review-template.xml.j2  sprint-plan.md.j2
.claude/skills/plan-hardening/: 01-plan-scope-review.xml.j2  02-sprint-scope-hardening.xml.j2  03-consistency-hardening.xml.j2  SKILL.md
.claude/skills/quality-management-gh/: SKILL.md
.claude/skills/rust-best-practices/: SKILL.md
.claude/skills/rust-development/: SKILL.md  cross-platform-guidelines.md
.claude/skills/sprint-report/: SKILL.md  report-detailed.md.j2  report.md.j2
.github/workflows/: baseline.yml  bench.yml  ci.yml  conformance.yml  fuzz.yml  model-catalog-drift.yml  semver.yml
.just/: explain.py  lint_catalog.py  print_help.py  run_cargo.py  run_fmt.py  run_lint.py  run_test.py  show_suites.py  test_catalog.py  unit_basic_audit.py
docs/: BRANCH_PROTECTION.md  TEST_COVERAGE_MATRIX.md  ci-operator-runbook.md  ext-compat.md  extension-compatibility-matrix.md  just-verification-macos.md  models.md  provider-discrepancy-ledger.json  releasing.md  swarm-activity-ledger.md  swarm-operations-runbook.md  testing-policy.md  traceability_matrix.json
docs/contracts/: semantic-compaction-quality-contract.json
docs/evidence/: cooperative-priority-lane-evaluation.json  dropin-certification-verdict.json  dropin-differential-evidence-suite.json  dropin-parity-gap-ledger.json  maintenance-dashboard.json  numa-lane-placement-evaluation.json  semantic-compaction-quality.json  ubs-extension-runtime-noise-baseline.json
docs/planning/: JUST_INTEGRATION_PLAN.md
docs/plans/: phase-A-superseded.md  sprint-a-1-establish-minimal-baseline-gate.md  sprint-a-1-stage-revert-pr.md  sprint-a-2-add-compile-gate.md  sprint-a-2-install-minimal-sc-just-skeleton.md  sprint-a-3-add-smoke-baseline.md  sprint-a-3-establish-lane-ssot.md  sprint-a-4-add-fast-test-baseline.md  sprint-a-4-add-optional-local-lanes.md  sprint-a-4-add-taxonomy-helpers.md  sprint-a-5-add-optional-local-lanes.md  sprint-a-5-reduce-required-pr-ci-to-baseline.md  sprint-a-5-refresh-ssot-and-timing.md  sprint-a-6-classify-long-running-workflows.md  sprint-a-6-merge-baseline-into-atm-graft.md  sprint-a-6-refresh-ssot-and-timing.md  sprint-a-7-merge-baseline-into-atm-graft.md
docs/plans/phase-A/: phase-A-current-evidence-report.md  phase-A-just-ci-recovery.md  phase-A-test-lane-report-template.md  phase-A-testing-strategy.md  sprint-a-1-establish-minimal-baseline-gate.md  sprint-a-10-expose-runnable-broad-test-surfaces.md  sprint-a-11-measure-broad-test-surface-timings.md  sprint-a-12-finalize-required-vs-runnable-gate.md  sprint-a-2-add-local-code-lint.md  sprint-a-3-add-smoke-baseline.md  sprint-a-4-add-taxonomy-helpers.md  sprint-a-5-add-optional-local-lanes.md  sprint-a-6-refresh-ssot-and-timing.md  (+4 more)
examples/: ext_stress.rs
fork-hardening/: README.md  just-ci-recovery-plan.md  testing-strategy.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_tool_paths.rs
reports/pi-agent-rust/: just-layering-and-atm-integration-strategy-2026-07-03.md  local-test-surface-review-2026-07-03.md  phase-a-final-multiplatform-closure-plan-2026-07-05.md  phase-a-keep-discard-refork-verdict-2026-07-05.md  phase-a-test-lane-ledger-2026-07-05.md  upstream-testing-contract-review-2026-07-03.md
scripts/: atm-nudge-xml-1.py  build_swarm_operator_runpack.py  check_branch_protection.sh  check_closeout_gate_freshness.py  check_completion_audit_gate.py  check_no_mock_policy.py  check_readme_evidence_freshness.py  check_swarm_runpack_freshness.py  check_traceability_matrix.py  check_ubs_staged_delta.py  conformance_trend.py  reconcile_beads_ledger.sh  report_swarm_claim_readiness.py  skill-smoke.sh  smoke.sh
scripts/ci/: generate_parity_evidence.py
scripts/e2e/: run_all.sh
scripts/perf/: orchestrate.sh
src/: agent.rs  atm_graft.rs  auth.rs  cli.rs  compaction.rs  config.rs  crypto_shim.rs  doctor.rs  extension_dispatcher.rs  extensions.rs  extensions_js.rs  hostcall_io_uring_lane.rs  interactive.rs  lib.rs  main.rs  migrations.rs  model.rs  models.rs  package_manager.rs  permissions.rs  resource_governor.rs  sdk.rs  semantic_workspace_graph.rs  session.rs  session_index.rs  session_sqlite.rs  session_store_v2.rs  sse.rs  swarm_activity_ledger.rs  swarm_replay.rs  tools.rs  tui.rs
src/interactive/: agent.rs  file_refs.rs  model_selector_ui.rs  perf.rs  view.rs
src/providers/: mod.rs  model_fetch.rs  openai.rs
tests/: adversarial_extensions.rs  bench_schema.rs  compaction.rs  cooperative_priority_lane_evaluation.rs  doctor_swarm_temp_dir_json.rs  dropin_slash_differential.rs  e2e_agent_loop.rs  e2e_rpc.rs  e2e_swarm_flight_recorder.rs  ext_conformance_artifacts.rs  ext_conformance_generated.rs  extensions_fs_shim.rs  node_buffer_shim.rs  node_crypto_shim.rs  perf_budgets.rs  phase3_cross_module_integration.rs  phase3_security_invariants.rs  qa_certification_dossier.rs  qa_docs_policy_validation.rs  release_evidence_gate.rs  security_budgets.rs  security_http_policy.rs  semantic_workspace_graph_builder.rs  session_conformance.rs  suite_classification.toml  swarm_replay_ingestor.rs  traceability_staleness.rs  validation_broker_cli.rs
tests/dropin_slash_differential/: mod.rs
tests/evidence_bundle/: bundle_report.md  events.jsonl  index.json
tests/ext_conformance/: API_USAGE_MATRIX.md  api_usage_matrix.json
tests/full_suite_gate/: certification_events.jsonl  certification_report.md  certification_verdict.json  extension_remediation_backlog.json  full_suite_events.jsonl  full_suite_report.md  full_suite_verdict.json  perf3x_bead_coverage_audit.json  practical_finish_checkpoint.json  waiver_audit.json
(+37 files in other folders)
